Animated parallax backgrounds

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+
+    <!-- Animated parallax backgrounds  aya hassan -->
+
+    <!-- characters  -->
+
+    <!-- props  -->
+
+    <!-- environment -->
+    <img id="layer1" src="./resources/backgrounds/layer1.png" >
+    <img id="layer2" src="./resources/backgrounds/layer2.png" >
+    <img id="layer3" src="./resources/backgrounds/layer3.png" >
+    <img id="layer4" src="./resources/backgrounds/layer4.png" >
+    
+
     <script src="scripts/script.js"></script>
 </body>
 </html>
