L7 Sprite animation Mohamed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Animated parallax backgrounds  aya hassan -->
 
     <!-- characters  -->
+    <img id="player" src="./resources/player.png" > 
 
     <!-- props  -->
 
