Creating a debug mode && Animating enemy sprite sheets

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,30 @@
     <title>JavaScrip Game</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <canvas id="canvas1"></canvas>
 
     <!-- Animated parallax backgrounds  aya hassan -->
 
     <!-- characters  -->
-    <img id="player" src="./resources/player.png" > 
+    <img id="player" src="./resources/player.png">
+
+    <img id="angler1" src="./resources/angler1.png">
+    <img id="angler2" src="./resources/angler2.png">
+    <img id="lucky" src="./resources/lucky.png">
+
 
     <!-- props  -->
 
     <!-- environment -->
-    <img id="layer1" src="./resources/backgrounds/layer1.png" >
-    <img id="layer2" src="./resources/backgrounds/layer2.png" >
-    <img id="layer3" src="./resources/backgrounds/layer3.png" >
-    <img id="layer4" src="./resources/backgrounds/layer4.png" >
-    
+    <img id="layer1" src="./resources/backgrounds/layer1.png">
+    <img id="layer2" src="./resources/backgrounds/layer2.png">
+    <img id="layer3" src="./resources/backgrounds/layer3.png">
+    <img id="layer4" src="./resources/backgrounds/layer4.png">
+
 
     <script src="scripts/script.js"></script>
 </body>
+
 </html>
