Drawing projectile as images && Custom fonts and game text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScrip Game</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
+        rel="stylesheet"/>
+    
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -16,7 +21,6 @@
 
     <!-- characters  -->
     <img id="player" src="./resources/player.png">
-
     <img id="angler1" src="./resources/angler1.png">
     <img id="angler2" src="./resources/angler2.png">
     <img id="lucky" src="./resources/lucky.png">
@@ -24,6 +28,8 @@
 
     <!-- props  -->
 
+    <!-- drawing projectile as images aya -->
+    <img id="projectile" src="./resources/projectile.png">
     <!-- environment -->
     <img id="layer1" src="./resources/backgrounds/layer1.png">
     <img id="layer2" src="./resources/backgrounds/layer2.png">
