--- a/index.html
+++ b/index.html
@@ -2,43 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScrip Game</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JavaScrip Game</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <canvas id="canvas1"></canvas>
+  <canvas id="canvas1"></canvas>
 
-    <!-- Animated parallax backgrounds  aya hassan -->
+  <!-- Animated parallax backgrounds  aya hassan -->
 
-    <!-- characters  -->
-    <img id="player" src="./resources/player.png">
-    <img id="angler1" src="./resources/angler1.png">
-    <img id="angler2" src="./resources/angler2.png">
-    <img id="lucky" src="./resources/lucky.png">
-
-
-    <!-- props  -->
-    <!-- drawing projectile as images aya -->
-    <img id="projectile" src="./resources/projectile.png">
-    <img id="gears" src="./resources/gears.png">
-    <!-- environment -->
-    <img id="layer1" src="./resources/backgrounds/layer1.png">
-    <img id="layer2" src="./resources/backgrounds/layer2.png">
-    <img id="layer3" src="./resources/backgrounds/layer3.png">
-    <img id="layer4" src="./resources/backgrounds/layer4.png">
+  <!-- characters  -->
+  <img id="player" src="./resources/player.png">
+  <img id="angler1" src="./resources/enemies/angler1.png">
+  <img id="angler2" src="./resources/enemies/angler2.png">
+  <img id="lucky" src="./resources/enemies/lucky.png">
+  <img id="hiveWhale" src="./resources/enemies/hiveWhale.png">
+  <img id="drone" src="./resources/enemies/drone.png">
 
 
-    <script src="scripts/script.js"></script>
+  <!-- props  -->
+  <!-- drawing projectile as images aya -->
+  <img id="projectile" src="./resources/projectile.png">
+  <img id="gears" src="./resources/gears.png">
+  <!-- environment -->
+  <img id="layer1" src="./resources/backgrounds/layer1.png">
+  <img id="layer2" src="./resources/backgrounds/layer2.png">
+  <img id="layer3" src="./resources/backgrounds/layer3.png">
+  <img id="layer4" src="./resources/backgrounds/layer4.png">
+
+
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
