Dust effect animation & Fire effect animation

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <!-- drawing projectile as images aya -->
   <img id="projectile" src="./resources/projectile.png">
   <img id="gears" src="./resources/gears.png">
+  <img id="smokeExplosion" src="resources/collisions/smokeExplosion.png" />
+  <img id="fireExplosion" src="resources/collisions/fireExplosion.png" />
   <!-- environment -->
   <img id="layer1" src="./resources/backgrounds/layer1.png">
   <img id="layer2" src="./resources/backgrounds/layer2.png">
